<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="level_game">NIVEL: </string>
    <string name="app_name">Club de los Vencedores</string>
    <string name="title_section1">1</string>
    <string name="title_section2">2</string>
    <string name="title_section3">3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_name">Nombre</string>
    <string name="register_age">Edad</string>
    <string name="register_genre">Género</string>
    <string name="register_status">¿Fumás?:</string>
    <string name="register_how_many_cigarettesv2">¿Cuántos cigarrillos al día fumabas?</string>
    <string name="register_how_long_no_smoking">¿Hace cuánto dejó de fumar?</string>
    <string name="register_how_long_smoking">¿Cuánto tiempo fumó?</string>
    <string name="register_how_long_smokingv2">¿Cuánto tiempo has fumado?</string>
    <string name="register_how_many_cigarettes_v2">¿Cuántos cigarrillos al día fumás?</string>
    <string name="register_how_long_smoking_p">¿Cuánto tiempo ha fumado?</string>
    <string name="register_how_plan_type">Seleccione un plan para dejar de fumar </string>
    <string name="register_how_plan_type_p2">Las opciones de una o más semanas, crearán un plan para dejar de fumar progresivamente.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_habits_ask1">¿Cuál es la hora del día en que más fuma?</string>
    <string name="register_habits_ask2">¿Cuales son los días de la semana que más fuma?</string>
    <string name="register_habits_tomorrow">Mañana</string>
    <string name="register_habits_afternoon">Tarde</string>
    <string name="register_habits_night">Noche</string>
    <string name="register_habits_weekday">Entre semana</string>
    <string name="register_habits_weekend">Fin de senmana</string>
    <string name="register_motivations_ask">¿Cuales son sus motivaciones para dejar de fumar?</string>
    <string name="register_motivations_update">Motivaciones para dejar de fumar</string>
    <string name="register_motivations_money">Ahorrar dinero</string>
    <string name="register_motivations_aesthetic">Estética</string>
    <string name="register_motivations_family">Por mi familia</string>
    <string name="register_motivations_health">Salud</string>
    <string name="save_and_next">Guardar y continuar</string>
    <string name="save">GUARDAR</string>
    <string name="title_activity_register_activity_one">Club de los Vencedores</string>
    <string name="title_activity_register_activity_two">RegisterActivityTwo</string>
    <string name="title_activity_register_activity_three">RegisterActivityThree</string>
    <string name="title_activity_register_activity_four">RegisterActivityFour</string>
    <string name="title_activity_register_activity_five">RegisterActivityFive</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_panic">PanicActivity</string>
    <string name="title_activity_my"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_achievements">AchievementsActivity</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="title_activity_video_player">Video Player</string>
    <string name="title_activity_pre_game">Instrucciones</string>
    <string name="title_activity_score_game">ScoreGameActivity</string>
    <string name="title_activity_advice">AdviceActivity</string>
    <string name="title_activity_update_info">UpdateInfoActivity</string>
    <string name="days_to_quit">Días para dejar de fumar</string>
    <string name="motivations">¿Qué te motiva a dejar de fumar?</string>
    <string name="motivationsv2">¿Qué te motivó a dejar de fumar?</string>

    <string-array name="now">
        <item>Desde ya</item>
    </string-array>
    <string-array name="all">
        <item>Desde ya</item>
        <item>7 días.</item>
        <item>15 días.</item>
        <item>30 días.</item>
    </string-array>
    <string-array name="seven">
        <item>Desde ya</item>
        <item>7 días.</item>
    </string-array>
    <string-array name="fifteen">
        <item>Desde ya</item>
        <item>7 días.</item>
        <item>15 días.</item>
    </string-array>
    <string-array name="ages">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_inicial">InicialActivity</string>
    <string name="title_activity_introductory_tour">IntroductoryTourActivity</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="title_activity_update_plan">Actualizar plan</string>

</resources>
