

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_motivations_ask"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textDirection="ltr"
        android:text="@string/register_motivations_money"
        android:id="@+id/register_motivations_money"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_motivations_aesthetic"
        android:id="@+id/register_motivations_aesthetic"
        android:layout_below="@+id/register_motivations_money"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_motivations_family"
        android:id="@+id/register_motivations_family"
        android:layout_below="@+id/register_motivations_aesthetic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_motivations_health"
        android:id="@+id/register_motivations_health"
        android:layout_below="@+id/register_motivations_family"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_and_next"
        android:id="@+id/savennext4"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Tienes un foto que te motive? subela. "
        android:id="@+id/count_friends"
        android:layout_below="@+id/register_motivations_health"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/uploadimage"
        android:layout_alignRight="@+id/savennext4"
        android:layout_alignEnd="@+id/savennext4"
        android:layout_toRightOf="@+id/register_motivations_aesthetic"
        android:layout_toEndOf="@+id/register_motivations_aesthetic"
        android:layout_above="@+id/savennext4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subir foto"
        android:id="@+id/uploadimage"
        android:layout_below="@+id/count_friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
