<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/register_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/register_age"
        android:layout_below="@+id/count_friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/register_name"
        android:layout_alignEnd="@+id/register_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_age"
        android:id="@+id/count_friends"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/register_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_genre"
        android:id="@+id/textView3"
        android:layout_below="@+id/register_age"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_below="@+id/textView3"
        android:id="@+id/radioGroup">

        <RadioButton android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_launcher"
            android:layout_width="wrap_content"
            android:checked="true"
            android:text=""
            android:id="@+id/radioM"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"></RadioButton>

        <RadioButton android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_launcher"
            android:drawableRight="@drawable/ic_launcher"
            android:layout_width="wrap_content"
            android:text=""
            android:id="@+id/radioF"
            android:layout_alignTop="@+id/radioM"
            android:layout_centerHorizontal="true"></RadioButton>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_motivations_update"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textView2" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/savennext1">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="5">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                android:text="@string/register_motivations_money"
                android:id="@+id/register_motivations_money"
                android:layout_below="@+id/register_motivations_aesthetic"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_motivations_aesthetic"
                android:id="@+id/register_motivations_aesthetic"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="5">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_motivations_health"
                android:id="@+id/register_motivations_health"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_motivations_family"
                android:id="@+id/register_motivations_family"
                android:layout_below="@+id/register_motivations_health"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>
        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
