<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_long_no_smoking"
        android:id="@+id/tv_days_quit"
        android:layout_below="@+id/days_quit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_long_smoking"
        android:id="@+id/texstView"
        android:layout_below="@+id/register_cigarettes_per_day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_many_cigarettesv2"
        android:id="@+id/count_friends"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_cigarettes_per_day"
        android:layout_below="@+id/count_friends"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignEnd="@+id/days_quit" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_days_quit"
        android:layout_below="@+id/tv_days_quit"
        android:layout_alignStart="@+id/days_quit"
        android:indeterminate="false"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1"
        android:gravity="center_horizontal|center"
        android:id="@+id/textView"
        android:layout_toEndOf="@+id/count_friends"
        android:layout_above="@+id/texstView"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/register_cigarettes_per_day" />

    <TextView
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal|center"
        android:text="1 año"
        android:id="@+id/textView4"
        android:layout_below="@+id/texstView"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/days_quit"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal|center"
        android:text="1 año"
        android:id="@+id/name_user"
        android:layout_toEndOf="@+id/no_days_quit"
        android:layout_alignTop="@+id/no_days_quit"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_and_next"
        android:id="@+id/savennext1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2 de 2"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/motivationsv2"
        android:id="@+id/textView3"
        android:layout_below="@+id/name_user"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/savennext1"
        android:layout_below="@+id/textView3">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="5">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                android:text="@string/register_motivations_money"
                android:id="@+id/register_motivations_money"
                android:layout_below="@+id/register_motivations_aesthetic"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_motivations_aesthetic"
                android:id="@+id/register_motivations_aesthetic"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="5">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_motivations_health"
                android:id="@+id/register_motivations_health"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_motivations_family"
                android:id="@+id/register_motivations_family"
                android:layout_below="@+id/register_motivations_health"
                android:layout_alignParentStart="true" />
        </RelativeLayout>



    </LinearLayout>
</RelativeLayout>
