<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_long_no_smoking"
        android:id="@+id/tv_days_quit"
        android:layout_below="@+id/days_quit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_long_smoking"
        android:id="@+id/texstView"
        android:layout_below="@+id/register_cigarettes_per_day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_many_cigarettes"
        android:id="@+id/count_friends"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/register_cigarettes_per_day"
        android:layout_below="@+id/count_friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/name_user"
        android:layout_alignEnd="@+id/name_user" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plan_type"
        android:entries="@array/plan_type"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_how_plan_type"
        android:id="@+id/textView3"
        android:layout_below="@+id/no_days_quit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:id="@+id/no_days_quit"
        android:layout_below="@+id/tv_days_quit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/days_quit"
        android:layout_alignEnd="@+id/days_quit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1 año"
        android:id="@+id/textView4"
        android:layout_below="@+id/texstView"
        android:layout_toEndOf="@+id/days_quit"
        android:layout_toRightOf="@+id/days_quit" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/days_quit"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/count_friends"
        android:layout_alignEnd="@+id/count_friends" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"

        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1 año"
        android:id="@+id/name_user"
        android:layout_alignTop="@+id/no_days_quit"
        android:layout_toRightOf="@+id/no_days_quit"
        android:layout_toEndOf="@+id/no_days_quit"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignBottom="@+id/no_days_quit" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_and_next"
        android:id="@+id/savennext2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
